# JagirSathi

./: README.md  app.py  main.py  pyproject.toml  requirements.txt
src/: helper.py  helperr.py  job_api.py  joby.py
static/: index.html
templates/: index.html
